--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
-# Groq API Key
-GROQ_API_KEY=your_groq_api_key_here
-
-# Supabase (Optional - for data persistence)
-SUPABASE_URL=your_supabase_url
-SUPABASE_ANON_KEY=your_supabase_anon_key
+# Google AI API Key (Gemini)
+GOOGLE_API_KEY=your_google_api_key_here
