--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/postcss": "^4.1.18",
-    "groq-sdk": "^0.37.0",
     "jszip": "^3.10.1",
     "next": "^16.1.1",
     "react": "^19.2.3",
